# ServiceHealthAssistant

./: .gitignore  README.md  ServiceHealthAssistant.slnx  pyproject.toml
docs/: repair-agent-bulk-metadata.md
src/ServiceHealthAssistant/: Program.cs  ServiceHealthAssistant.csproj
src/ServiceHealthAssistant/Adx/: GenevaMonitorFetcher.cs  IGenevaMonitorFetcher.cs  IKustoBrainIntentWriter.cs  IShericaCujoFetcher.cs  IShericaMonitorFetcher.cs  KustoBrainIntentWriter.cs  ShericaCujoFetcher.cs  ShericaMonitorFetcher.cs
src/ServiceHealthAssistant/Evaluators/: BrainIntentServiceEvaluator.cs  CoverageGapAnalyzer.cs
src/ServiceHealthAssistant/Models/: BrainIntentEvaluationRow.cs  Domain.cs  Enums.cs  RepairModels.cs  Requests.cs  Results.cs
src/ServiceHealthAssistant/Repair/: BrainCapabilityMetadataKeys.cs  BulkGenevaBrainCapabilityMetadataRepairAgent.cs  GenevaMonitorMetadataClient.cs  IDashboardMonitorSetProvider.cs  IGenevaMonitorMetadataClient.cs  IPropagationValidator.cs  KustoDashboardMonitorSetProvider.cs  KustoPropagationValidator.cs  RetryPolicy.cs
src/ServiceHealthAssistant/Rules/: ServiceHealthRules.cs
src/ServiceHealthAssistant/Tools/: BrainCapabilityRepairTools.cs  BrainIntentPersistenceTools.cs  CoverageGapTools.cs  ServiceHealthTools.cs
src/service_health_assistant/: __init__.py  models.py  rules.py  server.py
src/service_health_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_rules.py
tests/ServiceHealthAssistant.Tests/: ServiceHealthAssistant.Tests.csproj
(+4 files in other folders)
